# markview

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: snapshot.yml
assets/: core.js  markview.js  script.js  shell.html  styles.css  welcome.md
cmake/: FileEmbed.cmake
include/: markview.h
include/markview/: constants.h  file.h  filesystem.h  markdown.h  scripting.h
src/: WinMain.c  constants.c  constants.h  file.c  filesystem.c  filesystem.h  main.c  main.cpp  markdown.c  markview.c  markview.h  scripting.c  settings.c  settings.h  utils.c  utils.h
src/windows/: WinMain.c
